- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler
- fixed non-deterministic behavior in OBBT propagator
- don't disable LP presolving when using Xpress as LP solver

SCIP version 5.0.1
==================

performance improvements:
- increased threshold when to scale up cuts that are generated by nonlinear constraint handlers
- disable disaggregation of quadratic constraints by changing the default for constraints/quadratic/maxdisaggrsize to 1
  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)

deleted and modified parameters:
- rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"

new parameters:
- new parameter: "presolving/symmetry/displaynorbitvars" (whether we display the number of affected variables in the statistics)

fixed bugs:
- fixed wrong cast in LP iteration limit computation in proximity search heuristic
- fixed check for time limit in heur_nlpdiving
- fixed LP status to unsolved when marking LP to be resolved if objective limit has changed
- improved numerics and fixed stop criterion in zirounding heuristic
- fixed treatment of variable aggregations in knapsack constraint handler that led to wrong propagations
- fixed LPI status after changing objective in lpi_cpx, lpi_grb, lpi_xprs, lpi_msk
- fixed and unified asserts in LPIs
- retrieve interior solution instead of (possibly non-existing) basic solution from mosek after using
  barrier without crossover in lpi_msk
- copy parameter settings to sub-SCIPs in SCIPcopyLargeNeighborhoodSearch() also when copying only LP rows
- fixed a check for fixed variables in Binpacking example
- generate deprecation warnings when using SCIPaddCut
- fix bug in sepa_gomory if cut is a bound change