@@ -14,6 +14,7 @@ fixed bugs:
 - fixed wrong propagation in optcumulative constraint handler
 - fixed non-deterministic behavior in OBBT propagator
 - don't disable LP presolving when using Xpress as LP solver
+- fixed possible NULL pointer usage in cons_pseudoboolean
 
 SCIP version 5.0.1
 ==================
